Fix formatting and adjust type

--- a/views/login_error.html
+++ b/views/login_error.html
@@ -1,8 +1,11 @@
-<h1>Authorization Failed</h1>
-<p>
-  There was an error authorizing the application to access your Strava account.
-</p>
-<code
-  >Error code: <strong>{{ .Resource }} {{ .Field }} {{ .Code }}</strong
-  ><code> </code
-></code>
+<div class="results">
+  <h1>Authorization Failed</h1>
+  <p>
+    There was an error authorizing the application to access your Strava
+    account.
+  </p>
+  <code
+    >Error code: <strong>{{ .Resource }} {{ .Field }} {{ .Code }}</strong
+    ><code> </code
+  ></code>
+</div>
